--- a/personal.html
+++ b/personal.html
@@ -23,11 +23,48 @@
 			color:#daa520;
 		}
 
+		.abou{
+	position: relative;
+	width:100%;
+	height:100%
+	color:white;
+}
+nav{
+	display:flex;
+	width: 84%;
+	margin: auto;
+	padding:20px 0px;
+	align-items: center;
+	justify-content: center;
+}
+nav ul,li{
+	display: inline-block;
+	list-style: none;
+	margin:10px 19px;
+}
+nav ul,li,a{
+	text-decoration: none;
+	color:white;
+	font-weight: bold;
+}
+ul,li,nav a:hover{
+	color:grey;
+}
+
 
 	</style>
 </head>
 <body>
-	<center><h1>Personal Details</h1></center>
+	<div class="abou">
+	<nav>
+		<ul><li><u><a href="index.html">Home</a></u></a></li>
+			<li><u><a href="personal.html">About</a></u></a></li>
+			<li><u><a href="edu.html">Qualification</a></u></li>
+			<li><u><a href="skill.html">Skills & Interests</a></u></li>
+			<li><u><a href="contact.html">Contact</a></u></li>
+</ul></nav>
+
+	<!-- <center><h1>Personal Details</h1></center> -->
 	<center><img src="img/soo.jpg" width="220" height="220"></center>
 	<center><h2>SOORYA  S</h2></center>
 	<center><table>
